card text truncate dotdot issue removing functionality of be the first to comment/answer autofocus of text box in index.html

--- a/src/main/webapp/assets/css/home.css
+++ b/src/main/webapp/assets/css/home.css
@@ -297,6 +297,10 @@
     margin-bottom: 14px;
 }
 
+.by_story iframe{
+    display: none;
+}
+
 .by_blog_author .news-v3 .post-shares li i:hover{
     background:none !important;
 }
